Revise introduction section to enhance clarity on the interactions of global change drivers affecting biodiversity. Update text to emphasize the role of standing biomass in mediating these effects and refine the study's aims. Add new insights on experimental design and context dependency in alpine and sub-alpine grasslands.

--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -1,5 +1,6 @@
 ---
 editor: visual
+theme: light
 ---
 
 ```{r}
@@ -13,21 +14,25 @@ library(tarchetypes)
 
 ## Introduction
 
-*\[Interactive global change drivers\]* Anthropogenic global changes linked to land-use change, resource exploitation, climate change, invasive alien species, and pollution pose major and accelerating threats to biodiversity and ecosystem functioning [@Ipbes2019-sd]. These global change drivers do not act in isolation, however, but occur simultaneously and often interact in complex ways so that their cumulative impacts may exceed the sum of single drivers [@Speiser2022-st; @Komatsu2019-yr]. Multiple global change drivers can thus cause complex interactive effects and pose unprecedented threats to biodiversity and ecosystem functioning [@oliver2014interactions; @xue2024number]. Experiments are one way to disentangle the effects of such complex interactions and providing a mechanistic understanding of the multifactorial nature of global change drivers. Such a mechanistic knowledge is key for predicting how multiple global change drivers will impact biodiversity and ecosystem in the future.
+Anthropogenic global changes linked to land-use change, resource exploitation, climate change, invasive alien species, and pollution pose major and accelerating threats to biodiversity and ecosystem functioning [@Ipbes2019-sd]. These global change drivers do not act in isolation, however, but occur simultaneously and often interact in complex ways so that their cumulative impacts may exceed the sum of single drivers [@Speiser2022-st; @Komatsu2019-yr; @oliver2014interactions; @xue2024number]. While these interactive effects of global change drivers are complex, understanding these interactions is key to forecasting changes to biodiversity exposed to multiple global change drivers. Experiments are one way to disentangle the effects of such complex interactions and providing a mechanistic understanding of the multifactorial nature of global change drivers.
 
-<!--# Old text: The vast majority of empirical global change studies focus on only one, or perhaps two drivers, and rarely assess interactions [@rillig2019role; @Zandalinas2021-gp]. This is problematic because such studies may underestimate the overall pressures on biodiversity, thereby limiting our ability to predict the consequences of projected climate and environmental changes [@Speiser2022-st; @Komatsu2019-yr; @rillig2019role; @Oliver2014-wy]. To improve our understanding of global change impacts on biodiversity and ecosystem functioning, now and in the future, we therefore urgently need studies that explicitly consider multiple global change drivers and their interactions.  -->
+\[*needs some more work...*\] This need has inspired numerous experiments manipulating multiple global change drivers simultaneously [@Speiser2022-st; @Komatsu2019-yr]. One insight from many of these experiments is that different global change drivers often impact plant community biomass, as well as plant species composition and diversity (REFs). One of the major mechanisms through which several of these drivers, including warming and nitrogen addition, are affecting plant community composition and diversity is through increasing competition for light (REFs). Community biomass has been used as an mechanism of the magnitude of competitive interactions. Diversity often declines with increasing biomass (Grime and forward). We therefore hypothesis that the effects of warming and nitrogen addition and grazing on alpine plant diversity operate through the same underlying mechanism (@fig-concept), namely the role of standing biomass in controlling the direction and intensity of plant-plant interactions (H1). Specifically, a warmer climate and/or nitrogen addition should generally push plant communities towards increased standing biomass and hence increasingly competitive plant-plant interactions (i.e. pink and brown arrows in @fig-concept). If these expectations are confirmed, grazing, which can be managed locally and at short time scales, provides an opportunity to empirically and experimentally test conditions under which grazing positively influences plant diversity, which again could guide management solutions for alpine grasslands exposed to climate warming and atmospheric nitrogen deposition (change this last sentence a bit?). We therefore propose that we could simplify and synthesize across multiple global change drivers by using biomass as a common currency which reflects the magnitude of their impacts on competitive processes. If so, we predict that incorporating biomass in models of community response to global change drivers eliminates the direct and interacting impact of those drivers.
+
+We test this prediction in field experiments in montane Norwegian grassland manipulating three common global change drivers: climate change, nitrogen deposition, and grazing. All three drivers are known to affect community biomass…..BRIEF EVIDENCE FOR EACH OF THE THREE.
+
+We tested these predictions in mountain grasslands in, because they harbor unique biodiversity and provide important ecosystem functions and services such as carbon sequestration, water cycling, and grazing pastures; underpinning the lives and livelihoods of hundreds of millions of people [@egan2017mountain]. We used a fully factorial field experiment replicated across two sites, an alpine and a sub-alpine grassland in south-western Norway (@fig-methods), representing different annual and growing season temperatures and consequently plant productivity (Supplementary Figures S1 and S2a). The two sites reflect two different environmental contexts, allowing to test for context-dependency of community responses to global change drivers and how they are mediated by community biomass. These grasslands are grazed by domestic and natural grazers, with the extant grazing pressure decreasing with elevation (Supplementary Figure S2b). Alpine and sub-alpine plant communities were exposed to a combination of warmer climate (transplant to lower elevation), increased nitrogen deposition (seven levels ranging between 0 and 100 kg N ha^-1^ y^-1^), and simulated grazing by clipping and removing biomass at two different intensities. Plant communities moved to lower elevation experienced an approximately 3°C increase in average growing season temperature (air: 3.09 ± 0.186 °C, ground: 3.06 ± 0.176 °C, and soil: 2.82 ± 0.142 °C; Supplementary Figure S1, Table S1). We applied a large range of nitrogen levels to simulate nitrogen addition close to and well beyond the current atmospheric nitrogen deposition in the mountains in south-western Norway [@aas2023monitoring] (2-3 kg N ha^-1^ y^-1^) and the critical load for change in species composition in alpine grasslands [@bobbink2011review] (c. 5-10 kg N ha^-1^ y^-1^). Our understanding of environmentally extreme conditions is limited, and such simulations can provide a mechanistic understanding of thresholds for community change [@Kayler2015-pr]. We simulated grazing by clipping because our main interest was in the effect of biomass removal, however, we also had naturally grazed plots outside the fenced area to account for the difference between grazing by animals and clipping. After three years of global change treatments, we harvested standing biomass at peak growing season and assessed the change in vascular plant species composition and diversity.
+
+\[*Aim of the study*\] The aim of this study is to assess if warmer climate, nitrogen addition, and grazing operate through the same mechanisms, namely standing biomass, on diversity in alpine and sub-alpine grasslands.
+
+We repeat the experiment and analyses in two different environments (alpine and subalpine communities) to evaluate context dependency of community responses to global change drivers and how they are mediated by community biomass.
+
+Add paragraph on using indicators of environmental affinities (and maybe real traits) to gain further insight into mechanisms, especially those mediated by something other than community biomass. Specific predictions.
+
+![The working hypothesis that the three global change drivers warming, nitrogen addition and clipping (or grazing) affect plant diversity a) directly and b) indirectly via standing biomass.](figures/hypotheses.png){#fig-concept}
 
 *\[Mechanism\]* Biodiversity in grassland vegetation is impacted worldwide by multiple global change drivers [@Speiser2022-st]. Plant productivity generally responds to abiotic conditions, in particular temperature and precipitation [@craine2012timing]. In ecosystems, where temperature is a limiting factor for productivity, a warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within plant communities. Along environmental gradients, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive specialist species decreasing in abundance and diversity as they are exposed to increased competition from a taller and denser vegetation sward [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. This effect may be exacerbated if they are exposed to more competitive range-shifting lowland generalists (REFs). Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, is atmospheric nitrogen deposition [@Ipbes2019-sd]. In grassland vegetation, where plant growth and biomass is limited by nutrients, the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for limited resources [@yue2020changes; @Humbert2016-wg] (@fig-concept a). Accordingly, when grassland vegetation is exposed to both warming and nitrogen addition, both drivers have qualitatively similar effects on plant productivity and diversity [@yue2020changes].
 
-<!--# [Mechanism] In alpine vegetation, including grassland, heath, and tundra, plant productivity is generally temperature limited and warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within alpine plant communities. In particular, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive alpine specialist species decreasing in abundance and diversity as they are exposed to increased competition for light from a taller and denser vegetation sward, an effect that may be exacerbated if they are exposed to more competitive range-shifting lowland generalists [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, including alpine vegetation, is atmospheric nitrogen deposition [@Ipbes2019-sd]. As plant growth and biomass in alpine vegetation is often co-limited by temperature and nutrients [@Korner2003-kg], the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for light [@Humbert2016-wg] (@fig-concept a). Accordingly, an experiment that combined warming and nitrogen addition treatments in alpine vegetation found that both drivers have qualitatively similar effects; increased plant growth and loss of diversity via increased competition for light [@Klanderud2005-yx]. -->
-
-![Two alternative hypotheses of how the three global change drivers warming, nitrogen addition and clipping (or grazing) affect plant diversity. a) The three global change drivers warming, nitrogen addition and clipping (or grazing) affect plant diversity directly. b) The three drivers affect the plant diversity indirectly via standing biomass.](figures/hypotheses.png){#fig-concept}
-
-*\[Mechanism grazing\]* In contrast to warming and nutrient addition, grazing animals affect plant communities primarily through removing biomass and acting as disturbance agents through grazing and trampling, although we note that their effects on productivity are complex as they also add nutrients addition from urine and dung (@fig-concept a). Importantly, the effect of changes in biomass removal and disturbance on biodiversity should vary across environmental contexts, depending on the dominant biotic interactions within communities. Specifically, when environmental conditions are harsh, productivity low, and where facilitative interactions dominate, increased grazing is expected to lead to loss of facilitative interactions and may thus negatively impact diversity (white area in @fig-concept b). In contrast, in more productive systems, increased removal of biomass by grazers can lead to release from competitive interactions and hence increased diversity [@Austrheim2001-nu; @niedrist2009plant; @Bernes2015-yg; @frank2005interactive; @kaarlejarvi2017herbivores] (grey area in @fig-concept b). The magnitude of these effects of grazing on biodiversity thus depend both on the direction and intensity of plant-plant interactions within the vegetation (i.e., on productivity and/or environmental harshness, the x-axis in @fig-concept b) and on the intensity of grazing (i.e., the amount of biomass removed; dashed and dotted lines and arrows in @fig-concept b)[@cingolani2005grazing; @milchunas1988generalized; @milchunas1993quantitative].
-
-<!--# grazing effect on diversity: https://link.springer.com/article/10.1007/s00442-005-0019-2 -->
-
-\[*Proposed working hypothesis*\] Based on these observations, our working hypothesis is that the effects of warming and nitrogen addition and grazing on alpine plant diversity operate through the same underlying mechanisms (@fig-concept a), namely the role of plant productivity and standing biomass in controlling the direction and intensity of plant-plant interactions (H1). Specifically, a warmer climate and/or nitrogen addition should generally push plant communities towards increased standing biomass and hence increasingly competitive plant-plant interactions (i.e. pink and brown arrows in @fig-concept b). In contrast, the effect of grazing on biodiversity should depend on the system's position along the productivity gradient, and be negative under low productivity when facilitative interactions prevail and positive under high productivity when competitive interactions prevail (negative on the left-hand side, positive on the right-hand side, @fig-concept b; H2). If these expectations are confirmed, grazing, which can be managed locally and at short time scales, provides an opportunity to empirically and experimentally test conditions under which grazing positively influences plant diversity, which again could guide management solutions for alpine grasslands exposed to climate warming and atmospheric nitrogen deposition.
+*\[Mechanism grazing\]* In contrast to warming and nutrient addition, grazing animals affect plant communities primarily through removing biomass and acting as disturbance agents through grazing and trampling, although we note that their effects on productivity are complex as they also add nutrients addition from urine and dung (@fig-concept a). Importantly, the effect of changes in biomass removal and disturbance on biodiversity should vary across environmental contexts, depending on the dominant biotic interactions within communities. Specifically, when environmental conditions are harsh, productivity low, and where facilitative interactions dominate, increased grazing is expected to lead to loss of facilitative interactions and may thus negatively impact diversity (white area in @fig-concept b). In contrast, in more productive systems, increased removal of biomass by grazers can lead to release from competitive interactions and hence increased diversity [@Austrheim2001-nu; @niedrist2009plant; @Bernes2015-yg; @frank2005interactive; @kaarlejarvi2017herbivores] (grey area in @fig-concept b). The magnitude of these effects of grazing on biodiversity thus depend both on the direction and intensity of plant-plant interactions within the vegetation (i.e., on productivity and/or environmental harshness, the x-axis in @fig-concept b) and on the intensity of grazing (i.e., the amount of biomass removed; dashed and dotted lines and arrows in @fig-concept b)[@cingolani2005grazing; @milchunas1988generalized; @milchunas1993quantitative]. <!--# grazing effect on diversity: https://link.springer.com/article/10.1007/s00442-005-0019-2 -->
 
 *\[Mountains\]* We tested these hypotheses in mountain grasslands, because they harbor unique biodiversity and provide important ecosystem functions and services such as carbon sequestration, water cycling, and grazing pastures; underpinning the lives and livelihoods of hundreds of millions of people [@egan2017mountain]. In many regions of the world, alpine vegetation has been managed for grazing and fodder production within socio-ecological systems of transhumance or mixed agriculture for centuries [@Austrheim2001-nu; @Bunce2004-kn]. During the last decades, faster warming at higher elevations have been observed at many mountain ranges[@Ipcc2022-jw; @pepin2015elevation; @Pepin2022-fy] and climate change impacts have changed species distributions [@steinbauer2018accelerated], community structure and dynamics [@Vandvik2020-hu; @Alexander2015-gu], and ecosystem functioning [@Ipbes2019-sd; @Schroter2005-dy; @Schirpke2013-kh] along elevational gradients. At the same time alpine ecosystems are affected by other global change drivers such as atmospheric nitrogen deposition [@Humbert2016-wg] and change in land use, including both intensification and abandonment of grazing regimes [@Austrheim2001-nu; @Shukla2019-es; @macdonald2000agricultural].
 
