--- a/manuscript/SI.qmd
+++ b/manuscript/SI.qmd
@@ -31,10 +31,11 @@ library(ggpubr)
 
 ### Supplementary Figure S1: Temperature effects on the microclimate
 
+
 ```{r}
 #| label: fig-daily-climate
 #| warning: false
-#| fig-cap: a) Daily temperature and soil moisture values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer temperature and soil moisture between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (grey) and warming (red) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star in each panel.
+#| fig-cap: "a) Daily temperature and soil moisture values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer temperature and soil moisture between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (black) and warming (red) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star in each panel."
 
 tar_load(daily_climate_figure)
 daily_climate_figure
@@ -47,7 +48,7 @@ daily_climate_figure
 #| label: fig-prod-consumption 
 #| warning: false
 #| fig-height: 4
-#| fig-cap: Annual productivity (mg m^-2^ y^-1^) and biomass consumption (mg m^-2^ y^-1) at the three study sites. Colors indicate grazed (yellow) and ungrazed (caged; gray) plots. Productivity and biomass consumption by grazers was assessed using three 30 x 30 cm cages (ungrazed) and according control plots (grazed). The cages were designed to exclude mammal herbivores, but not insects, with a mesh size of 1 cm. The plots were moved every 15.5 ± 0.447 days, and the biomass in each plot was harvested 2-3 cm above the ground, dried at 65°C for 72h and weighed. 
+#| fig-cap: "Annual productivity (mg m^-2^ y^-1^) and biomass consumption (mg m^-2^ y^-1) at the three study sites. Colors indicate grazed (yellow) and ungrazed (caged; gray) plots. Productivity and biomass consumption by grazers was assessed using three 30 x 30 cm cages (ungrazed) and according control plots (grazed). The cages were designed to exclude mammal herbivores, but not insects, with a mesh size of 1 cm. The plots were moved every 15.5 ± 0.447 days, and the biomass in each plot was harvested 2-3 cm above the ground, dried at 65°C for 72h and weighed."
 
 tar_load(productivity_consumption_figure)
 productivity_consumption_figure
@@ -58,7 +59,7 @@ productivity_consumption_figure
 
 ```{r}
 #| label: tbl-climate-test
-#| tbl-cap: Results from linear regression of the effects of warming on air, ground, and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are estimates, standard error, t statistics and P value.
+#| tbl-cap: "Results from linear regression of the effects of warming on air, ground, and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are estimates, standard error, t statistics and P value."
 
 
 tar_load(microclimate_stats)
@@ -71,7 +72,7 @@ microclimate_stats
 ```{r}
 #| label: fig-climate
 #| warning: false
-#| fig-cap: Global change impact on microclimate. Average summer (June - September) air, ground soil temperature and soil moisture between 2019 and 2022 with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) site. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant model terms (W = warming).
+#| fig-cap: "Global change impact on microclimate. Average summer (June - September) air, ground soil temperature and soil moisture between 2019 and 2022 with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) site. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant model terms (W = warming)."
 tar_load(climate_figure)
 climate_figure
 ```
@@ -80,7 +81,7 @@ climate_figure
 
 ```{r}
 #| label: tbl-climate
-#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on air, ground and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
+#| tbl-cap: "Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on air, ground and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold."
 
 tar_load(climate_stats)
 climate_stats
@@ -93,7 +94,7 @@ climate_stats
 #| label: fig-bio-calc-coll
 #| echo: false
 #| warning: false
-#| fig-cap: Relationship between collected and estimated standing biomass in the control plots. Standing biomass is estimated from the community data using *sum of cover x vegetation height*. This estimated biomass is then backtransformed to actual biomass using the biomass collected at peak growing season in the control plots
+#| fig-cap: "Relationship between collected and estimated standing biomass in the unfertilized and unclipped control plots. Standing biomass is estimated from the community data using *sum of cover x vegetation height*. This estimated biomass is then backtransformed to actual biomass using the biomass collected at peak growing season in the control plots. The colour indicates the warming treatment (ambient = black, warming = red)."
 
 
 tar_read(standing_biomass_back_fig)
@@ -106,7 +107,7 @@ tar_read(standing_biomass_back_fig)
 #| label: tbl-standing-biomass-model-output
 #| echo: false
 #| warning: false
-#| tbl-cap: Model output for the relationship between estimated and collected standing biomass.
+#| tbl-cap: "Model output for the relationship between estimated and collected standing biomass. Shown are estimates, standard error, t statistics and P value."
 
 tar_load(standing_biomass_model)
 
@@ -130,11 +131,12 @@ tidy(standing_biomass_model) |>
 ```
 
 ### Supplementary Table S4: Model output for biomass and diversity models
+
 ```{r}
 #| label: tbl-biomass-diversity-model-output
 #| echo: false
 #| warning: false
-#| tbl-cap: Model output for the relationship between the global change drivers and standing biomass or the diversity indices. Shown are sum of squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
+#| tbl-cap: "Model output for the relationship between the global change drivers and standing biomass or the diversity indices. Shown are sum of squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold."
 
 tar_load(biomass_origin_anova_table)
 tar_load(diversity_origin_anova_table)
@@ -264,11 +266,12 @@ biomass_origin_anova_table |>
 #| warning: false
 #| fig-width: 8
 #| fig-height: 7
-#| fig-cap: Species richness (a) and evenness (b) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) sites. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (grey) and warm conditions (red) and the shapes show the different clipping treatments (circle = control, square = medium, triangle = intensive clipping). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) model terms (W = warming, N = nitrogen addition, C = clipping, S = site, combined letters, e.g. WxC = interactions). Letters in grey indicate almost significant model terms (0.05 > *P* < 0.07).
+#| fig-cap: "Species richness (a) and evenness (b) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) sites. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (black) and warm conditions (red) and the shapes show the different clipping treatments (circle = control, square = medium, triangle = intensive clipping). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) model terms (W = warming, N = nitrogen addition, C = clipping, S = site, combined letters, e.g. WxC = interactions). Letters in grey indicate almost significant model terms (0.05 < *P* < 0.07)."
 
 tar_read(div_index_figure)
 
 ```
+
 
 ### Structural equation models
 
@@ -280,7 +283,7 @@ tar_read(div_index_figure)
 #| message: false
 #| fig-width: 10
 #| fig-height: 10
-#| tbl-cap: SEM output for direct effects of warming, nitrogen addition, and cutting and indirect effects via standing biomass on Shannon diversity. Shown are the response, predictors, standard estimate, standard error, degrees of freedome and P value. Variables in bold have a significant P value.
+#| tbl-cap: "SEM output for direct effects of warming, nitrogen addition, and cutting and indirect effects via standing biomass on Shannon diversity. Shown are the response, predictors, standard estimate, standard error, degrees of freedome (DF) and P value. Variables in bold have a significant P value."
 
 tar_load(cut_final_diversity)
 
@@ -308,7 +311,7 @@ cut_final_diversity[[2]] |>
 
 ```
 
-#### SEM for species richness and evenness
+#### Supplementary Figure S6: SEM for species richness and evenness
 
 ```{r}
 #| label: fig-cut-final-rich-even
@@ -316,7 +319,7 @@ cut_final_diversity[[2]] |>
 #| message: false
 #| fig-width: 10
 #| fig-height: 10
-#| fig-cap: "Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and cutting and indirectly through biomass on species richness and evenness for the a) and c) alpine and b) and d) sub-alpine site. The numbers indicate the regression coefficients and the thickness of the line relates to the strength of the effect. The linetype and colours shows the strength and direction of the effect (solid coloured = positive and significant, dashed coloured = negative and significant, and dot-dashed grey = negative and non-significant). Each driver, mediator and predictor are coloured in a separate colour: red = warming, dark green = nitrogen, yellow = clipping, light green = biomass, grey = diversity."
+#| fig-cap: "Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and cutting and indirectly through biomass on species richness and evenness for the a) and c) alpine and b) and d) sub-alpine site. The numbers indicate the regression coefficients and the thickness of the line relates to the strength of the effect. Significant effects are indicated by asterisks (*** for P value < 0.001, ** for 0.001 ≤ P-value < 0.01, and * for 0.01 ≤ P-value < 0.05). The linetype and colours shows the direction of the effect (solid = positive and dotted = negative). Each driver, mediator and predictor are coloured in a separate colour: red = warming, green = nitrogen, yellow = clipping, blue = biomass, black = diversity index."
 
 tar_load(cut_final_richness_evenness)
 
@@ -324,7 +327,86 @@ cut_final_richness_evenness[[1]]
 
 ```
 
-#### SEMs for natural grazing
+
+### Supplementary Figure S7: PCA for single sites
+
+```{r}
+#| label: fig-trait-pca2
+#| echo: false
+#| message: false
+#| warning: false
+#| fig-width: 12
+#| fig-height: 6
+#| fig-cap: "Multivariate community-weighted mean affinity responses to warming, clipping and and nitrogen addition, determined by a principal component analysis (PCA) at the a) alpine and b) sub-alpine sites. The colour represents the warming treatment (black = ambient, red = warming), the shape the clipping treatment (circle = control, square = medium, triangle = intensive clipping), and the point size indicates nitrogen addition level. Affinities include plant height, temperature, light, moisture, nutrients, reaction, and grazing disturbance. Arrows show trait loadings on the first two principal components."
+
+tar_load(affinity_pca_plot_single)
+
+affinity_pca_plot_single
+
+```
+
+### Supplementary Figure S8: SEM for single sites
+
+```{r}
+#| label: fig-cut-affinity2
+#| echo: false
+#| message: false
+#| fig-width: 10
+#| fig-height: 10
+#| fig-cap: "Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and cutting and indirectly through biomass on environmental affinity for the a) and c) alpine and b) and d) sub-alpine site. The PCA for the affinity was done separately for the alpine and sub-alpine site. The numbers indicate the regression coefficients and the thickness of the line relates to the strength of the effect. Significant effects are indicated by asterisks (*** for P value < 0.001, ** for 0.001 ≤ P-value < 0.01, and * for 0.01 ≤ P-value < 0.05). The linetype and colours shows the direction of the effect (solid = positive and dotted = negative). Each driver, mediator and predictor are coloured in a separate colour: red = warming, green = nitrogen, yellow = clipping, blue = biomass, black = affinity."
+
+tar_load(cut_affinity2)
+
+cut_affinity2[[1]]
+
+```
+
+### Supplementary Figure S9: Affinity distributions
+
+To understand how traits respond to the different global change drivers, we analyzed the effects of warming, nitrogen addition, clipping, and biomass on plant height and Ellenberg indicator values (@tbl-trait-stats).
+
+```{r}
+#| label: fig-affinity-distributions
+#| echo: false
+#| message: false
+#| warning: false
+#| fig-width: 10
+#| fig-height: 15
+#| fig-cap: "Trait distributions for different treatments at the alpine (upper row) and sub-alpine site (bottom row). Shown are the trait distributions for plant height and Ellenberg light, temperature, nutrient, moisture, salinity and reaction indicator values, as well as a mowing and grazing disturbance indicator. The colours indicate the different treatments: a) warming (ambient = black, warming = red), b) nitrogen addition levels, and c) clipping (control, medium, intensive)."
+
+# Load the individual plots
+tar_load(traits_warming_plot)
+tar_load(traits_nitrogen_plot)
+tar_load(traits_clipping_plot)
+
+# Combine the plots with tags
+(traits_warming_plot + labs(tag = "a) Warming")) +
+  (traits_nitrogen_plot + labs(tag = "b) Nitrogen")) +
+  (traits_clipping_plot + labs(tag = "c) Clipping")) +
+  plot_layout(ncol = 1, guides = "collect") &
+  theme(legend.position = "bottom",
+        legend.box="vertical",
+        plot.tag = element_text(size = 12, hjust = 0, vjust = -0.2))
+
+```
+
+
+### Supplementary Table S6: Affinity distributions statistics
+
+```{r}
+#| label: tbl-trait-stats
+#| echo: false
+#| warning: false
+#| tbl-cap: "Statistical results for trait responses to global change drivers. Shown are the effects of warming, nitrogen addition, clipping, and biomass on plant height and Ellenberg indicator values (light, temperature, nutrients, moisture, reaction, mowing, and grazing disturbance) at the alpine and sub-alpine sites. Significant effects (P ≤ 0.05) are shown in bold."
+
+tar_load(trait_stats_table)
+
+trait_stats_table
+
+```
+
+
+#### Supplementary Figure S10: SEMs for natural grazing
 
 ```{r}
 #| label: fig-graz-final-all-diversity
@@ -332,7 +414,7 @@ cut_final_richness_evenness[[1]]
 #| message: false
 #| fig-width: 10
 #| fig-height: 15
-#| fig-cap: Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and grazing and indirectly through biomass on diversity, richness, and evenness for the alpine (a, c, e) and the sub-alpine site (b, d, f). The numbers indicate the regression coefficients, the linetype shows the strength (solid = significant, dashed = non-significant), and the colour the direction of the effect (blue = positive, red = negative). 
+#| fig-cap: "Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and grazing and indirectly through biomass on diversity, richness, and evenness for the alpine (a, c, e) and the sub-alpine site (b, d, f). The numbers indicate the regression coefficients and the thickness of the line relates to the strength of the effect. Significant effects are indicated by asterisks (*** for P value < 0.001, ** for 0.001 ≤ P-value < 0.01, and * for 0.01 ≤ P-value < 0.05). The linetype and colours shows the direction of the effect (solid = positive and dotted = negative). Each driver, mediator and predictor are coloured in a separate colour: red = warming, green = nitrogen, yellow = grazing, blue = biomass, black = diversity indices."
 
 tar_load(graz_final_all_div)
 
